--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Add Dicord token
-        run: sed -i 's/yourprodtoken/${{ secrets.DISCORD_TOKEN }}/g' .env
+        run: |
+          sed -i 's/Your Discord Token/${{ secrets.DISCORD_TOKEN }}/g' .env
+          sed -i 's/Your KSoft API Token/${{ secrets.KSOFT_TOKEN }}/g' .env
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@v2.1.6
         env:
