--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
     randomizer:
         build: .
+        restart: always
         command: npm start
         env_file: .env
         volumes:
